# ikuyo-tauri

./: .gitignore  README.md  backend-review.md  components.json  feature-integration-plan.md  index.html  package.json  pnpm-lock.yaml  rust_backend_review.md  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
.github/workflows/: tauri-build.yml
.tasks/: 2025-07-07_1_rust-refactor.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_tables.sql  01__init.sql  02_add_task_table.sql
src-tauri/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  worker.rs
src-tauri/src/commands/: bangumi.rs  crawler.rs  download.rs  mod.rs  scheduler.rs  subscription.rs
src-tauri/src/core/: anime_parser.rs  http_fetcher.rs  mikan_fetcher.rs  mikan_parser.rs  mod.rs  progress_channel.rs  text_parser.rs
src-tauri/src/repositories/: anime.rs  anime_subtitle_group.rs  base.rs  crawler_task.rs  download_task.rs  mod.rs  resource.rs  scheduled_job.rs  subscription.rs  subtitle_group.rs
src-tauri/src/services/: bangumi_service.rs  crawler_service.rs  download_service.rs  mod.rs  subscription_service.rs
src-tauri/src/types/: bangumi.rs  crawler.rs  download.rs  mod.rs  scheduler.rs  subscription.rs
src/assets/: base.css  desktop-design-system.css  main.css  task.css
src/components/: AnimeCard.vue  AnimeResourcesList.vue  AppHeader.vue  AppLayout.vue  EpisodeCarousel.vue  EpisodeDetailModal.vue  (+11 more)
(+51 files in other folders)
