[package]
name = "ikuyo-app"
version = "1.0.0"
description = "Ikuyo App"
authors = ["Niloux3d"]
edition = "2021"

[lib]
name = "ikuyo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
toml = "0.5"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "1"
chrono = "0.4"
async-trait = "0.1.88"
regex = "1"
futures-util = "0.3"
once_cell = "1.21.3"
tokio-util = "0.7"
chrono-tz = "0.10.4"
librqbit = "8.1.1"
dirs = "6.0.0"
open = "5.3.2"
